Fixed styles and other tweakings

--- a/Readme.ipynb
+++ b/Readme.ipynb
@@ -6,9 +6,30 @@
    "source": [
     "# nb2wp - Convert Jupyter Notebook to Wordpress.com HTML\n",
     "\n",
-    "This `np2wp` utility converts Jupyter notebooks to plain HTML suitable for Wordpress.com. Note the difference between **Wordpress.com** service and Wordpress.org platform. The Wordpress.com service is much stricter.\n",
+    "This `np2wp` utility converts Jupyter notebooks to plain HTML suitable for Wordpress.com. Note the difference between **Wordpress.com** service and Wordpress.org platform. The Wordpress.com service is much stricter (no arbitrary plugins, no scripts, no CSS, no `data:` URI, etc.).\n",
     "\n",
-    "We will use this `Readme.ipynb` notebook to explain the utility as well we demonstrate the conversion features. We will convert this notebook to HTML at the end of the notebook."
+    "This utility does the following:\n",
+    "- convert .ipynb to HTML using [nbconvert](https://nbconvert.readthedocs.io/en/latest/) using selected template (full, basic, or custom)\n",
+    "- convert the CSS to inline style using [pynliner](https://pythonhosted.org/pynliner/) so that the style will be honoured by Wordpress. By default it replaces the CSS given by nbconvert with custom and simpler `style.css` that can be inlined by pynliner.\n",
+    "- extract embedded images (such as ones produced by Matplotlib) and local images to `img` directory. You need to upload this `img` directory somewhere and provide URL prefix for the images.\n",
+    "- convert Latex directives to Wordpress.com Latex directives.\n",
+    "\n",
+    "Then you need to do some manual works:\n",
+    "- copy-paste the HTML inside the `<body>` to Wordpress HTML editor\n",
+    "- upload the image directory.\n",
+    "\n",
+    "For an example, you can see the result of converting this notebook in https://indoml.com/2019/09/24/converting-jupyter-notebook-to-wordpress-com-html/\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notes and Limitations\n",
+    "\n",
+    "- The CSS will ignore your Wordpress theme. The post will look more like Jupyter notebook than your themed blog.\n",
+    "- There are a lot of untidy elements here and there. We'll fix this as we go along.\n",
+    "- The pynliner cannot handle selector containing parenthesis (e.g. `div:not([blah])`) and `~` (tilde) operator. That's why we use custom css."
    ]
   },
   {
@@ -52,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +84,7 @@
      "text": [
       "Help on function nb2wp in module nb2wp:\n",
       "\n",
-      "nb2wp(nbfile, out_dir='', template='full', css_file='style.css', save_img=True, img_dir='img', img_url_prefix='img', latex='wp', remove_attrs=True, save_css=False, save_html=False, quiet=False)\n",
+      "nb2wp(nbfile, out_dir='', template='full', css_file='style.css', save_img=True, img_dir='img', img_url_prefix='img', latex='wp', remove_attrs=True, footer=True, save_css=False, save_html=False, quiet=False)\n",
       "    Convert Jupyter notebook file to Wordpress.com HTML.\n",
       "    \n",
       "    Parameters:\n",
@@ -86,7 +107,8 @@
       "                empty,  no Latex conversion  will be performed  (the directives\n",
       "                will be left unchanged).\n",
       "    remove_attrs: Remove various HTML attributes such as \"class\", \"id\" from the\n",
-      "                output HTML file to simplify the file. Default: True \n",
+      "                output HTML file to simplify the file. Default: True\n",
+      "    footer:     Add conversion footer. Default: True\n",
       "    save_css:   Save  the CSS  that is used to 'style.css' file in out_dir, for\n",
       "                debugging. Default: False\n",
       "    save_html:  Save  the HTML  before it is  processed to 'input.html' file in\n",
@@ -106,57 +128,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Running with Default Values for Self Hosted Webserver\n",
-    "\n",
-    "Note: the `out_dir` parameter is optional and can be omitted. It is provided here to save outputs in different directories for demonstration purposes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using template: full\n",
-      "Using CSS file style.css\n",
-      "out/demo1\\Readme.html: 28535 bytes written in 2.027s\n"
-     ]
-    }
-   ],
-   "source": [
-    "nb2wp('Readme.ipynb', out_dir='out/demo1')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you're reading this in Jupyter or on GitHub, you can open [out/demo1/Readme.html](out/demo1/Readme.html) to see how the output looks like.\n",
-    "\n",
-    "The output should be okay (bearing in mind that if you just restarted the kernel and cleared the output then the subsequent code cells will be empty):\n",
-    "- the general Markdown conversion should work\n",
-    "- syntax coloring should work\n",
-    "- images should work\n",
-    "- Latex formulas will be broken (since the syntax is targeted for Wordpress)\n",
-    "\n",
-    "You cannot copy/paste the HTML to Wordpress.com yet because that will break local and Matplotlib images, because the images `src` URLs are set to relative path `img`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Generating Wordpress HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -167,33 +144,29 @@
      "text": [
       "Using template: full\n",
       "Using CSS file style.css\n",
-      "out/demo2\\Readme.html: 28665 bytes written in 2.099s\n"
+      "out/Readme\\Readme.html: 159906 bytes written in 33.154s\n"
      ]
     }
    ],
    "source": [
-    "nb2wp('Readme.ipynb', out_dir='out/demo2', \n",
-    "      img_url_prefix='https://raw.githubusercontent.com/bennylp/nb2wp/master/out/demo2/img')"
+    "nb2wp('Readme.ipynb', out_dir='out/Readme', \n",
+    "      img_url_prefix='https://raw.githubusercontent.com/bennylp/nb2wp/master/out/Readme/img')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you're reading this in Jupyter or GitHub, you can open [out/demo2/Readme.html](out/demo2/Readme.html) to see how the output looks like. \n",
+    "The command above will do the following:\n",
+    "- create `Readme.html` in `out/Readme` directory\n",
+    "- extract images to `out/Readme/img` directory\n",
+    "- set the `<img> src` to use 'https://raw.githubusercontent.com/bennylp/nb2wp/master/out/Readme/img' as the prefix. For example, if the file is `img1.png`, then the file should be reachable as `'https://raw.githubusercontent.com/bennylp/nb2wp/master/out/Readme/img/img1.png'\n",
     "\n",
-    "The idea here is to place the image files on GitHub and reference them from Wordpress. This is the easiest for my use case because my work is public and thus I can place the files publicly on git/GitHub along with the original notebook.\n",
+    "Then you need to open `Readme.html` (open [out/Readme/Readme.html](out/Readme/Readme.html) if you're reading this from Jupyter notebook) and copy/paste the elements inside `<body>` to Wordpress HTML editor.\n",
     "\n",
-    "If you want to serve the image files from elsewhere, you need to copy the images from `out_dir/img` directory and call with `img_url_prefix` parameter set accordingly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# That's All\n",
+    "As for the image, in this example we place the image files on GitHub along with this notebook, so I just need to add, commit, and push this repository to make the images available at the above URL prefix. If you serve the image files from elsewhere, you need to copy the images there and call with `img_url_prefix` parameter set accordingly.\n",
     "\n",
-    "Yup, that's all. The rest of the notebook is to demonstrate various notebook features that can be converted by the utility."
+    "That's pretty much all. The rest of the notebook is to demonstrate various notebook features that can be converted by the utility."
    ]
   },
   {
