--- a/Readme.ipynb
+++ b/Readme.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# nb2wp - Convert Jupyter Notebook to Wordpress.com HTML\n",
     "\n",
-    "This `np2wp` utility converts Jupyter notebooks to plain HTML suitable for Wordpress.com. Note the difference between **Wordpress.com** service and Wordpress.org platform. The Wordpress.com service is much stricter (no arbitrary plugins, no scripts, no CSS, no `data:` URI, etc.).\n",
+    "This post describes [**nb2wp**](https://github.com/bennylp/nb2wp) utility to convert Jupyter notebooks to plain HTML suitable for Wordpress.com. Note the difference between **Wordpress.com** service and Wordpress.org platform. The Wordpress.com service is much stricter (no arbitrary plugins, no scripts, no CSS, no `data:` URI, etc.).\n",
     "\n",
     "This utility does the following:\n",
     "- convert .ipynb to HTML using [nbconvert](https://nbconvert.readthedocs.io/en/latest/) using selected template (full, basic, or custom)\n",
@@ -18,7 +18,7 @@
     "- copy-paste the HTML inside the `<body>` to Wordpress HTML editor\n",
     "- upload the image directory.\n",
     "\n",
-    "For an example, you can see the result of converting this notebook in https://indoml.com/2019/09/24/converting-jupyter-notebook-to-wordpress-com-html/\n"
+    "For an example, you can see the result of converting this notebook in [**this Wordpress post**](https://indoml.com/2019/09/24/converting-jupyter-notebook-to-wordpress-com-html/). You can view the original notebook [on GitHub](https://github.com/bennylp/nb2wp/blob/master/Readme.ipynb) or [with nbviewer](https://nbviewer.jupyter.org/github/bennylp/nb2wp/blob/master/Readme.ipynb). As you can see the output is quite similar."
    ]
   },
   {
@@ -27,6 +27,8 @@
    "source": [
     "### Notes and Limitations\n",
     "\n",
+    "- **BEWARE with stray dollar character in your notebook. The script will interpret that as Latex directive.**\n",
+    "- Long line (width wise) in code cell is not displayed correctly.\n",
     "- The CSS will ignore your Wordpress theme. The post will look more like Jupyter notebook than your themed blog.\n",
     "- There are a lot of untidy elements here and there. We'll fix this as we go along.\n",
     "- The pynliner cannot handle selector containing parenthesis (e.g. `div:not([blah])`) and `~` (tilde) operator. That's why we use custom css."
@@ -45,23 +47,19 @@
    "source": [
     "## Installation\n",
     "\n",
-    "For conversion, two files are needed: `nb2wp.py` and `styles.css`.\n",
-    "\n",
-    "For running this notebook, `carrot.png` is also needed (or otherwise it's easier to just download the whole repository)."
+    "Clone [nb2wp](https://github.com/bennylp/nb2wp) repository to get the files."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running\n",
-    "\n",
-    "Import and call from your program."
+    "## Running"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -144,13 +142,14 @@
      "text": [
       "Using template: full\n",
       "Using CSS file style.css\n",
-      "out/Readme\\Readme.html: 159906 bytes written in 33.154s\n"
+      "out/Readme\\Readme.html: 160732 bytes written in 35.359s\n"
      ]
     }
    ],
    "source": [
     "nb2wp('Readme.ipynb', out_dir='out/Readme', \n",
-    "      img_url_prefix='https://raw.githubusercontent.com/bennylp/nb2wp/master/out/Readme/img')"
+    "      img_url_prefix='https://raw.githubusercontent.com/' + \n",
+    "                     'bennylp/nb2wp/master/out/Readme/img')"
    ]
   },
   {
@@ -175,7 +174,7 @@
    "source": [
     "# Markdown Conversions\n",
     "\n",
-    "All markdown features should be converted fine. These are some Markdown demos from https://markdown-it.github.io/.\n",
+    "All markdown features should be converted. These are some Markdown demos from https://markdown-it.github.io/.\n",
     "\n",
     "## h2 Heading\n",
     "### h3 Heading\n",
